fix image overflow problims

--- a/styles/Work.scss
+++ b/styles/Work.scss
@@ -89,6 +89,7 @@
     width: 100%;
     height: 100%;
     border-radius: 0.5rem;
+    overflow: hidden;
   }
 
   @media screen and (min-width: 2000px) {
